REOPENED204762
WPT test MediaStream-MediaElement-srcObject.https.html times out
https://bugs.webkit.org/show_bug.cgi?id=204762
Summary WPT test MediaStream-MediaElement-srcObject.https.html times out
Eric Carlson
Reported 2019-12-02 12:56:21 PST
Most of MediaStream-MediaElement-srcObject.https.html isn't run because one of the sub tests times out.
Attachments
Patch (20.59 KB, patch)
2019-12-03 10:25 PST, Eric Carlson
no flags
Patch (21.11 KB, patch)
2019-12-03 13:05 PST, Eric Carlson
no flags
Patch for landing (21.18 KB, patch)
2019-12-03 13:22 PST, Eric Carlson
no flags
Patch for landing (21.18 KB, patch)
2019-12-03 13:56 PST, Eric Carlson
no flags
Patch for landing (22.27 KB, patch)
2019-12-04 12:10 PST, Eric Carlson
no flags
Patch for landing (22.27 KB, patch)
2019-12-04 12:49 PST, Eric Carlson
no flags
Radar WebKit Bug Importer
Comment 1 2019-12-02 12:56:34 PST
Eric Carlson
Comment 2 2019-12-03 10:25:37 PST
youenn fablet
Comment 3 2019-12-03 10:58:54 PST
Comment on attachment 384722 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=384722&action=review > Source/WebCore/html/HTMLMediaElement.cpp:4858 > + if (loop() && !m_mediaController && playbackRate > 0 && !hasMediaStreamSrcObject()) { Should loop() (or a hasLoop() variant) always return false if there is a media stream src object? > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:830 > + m_player->durationChanged(); Should we introduce a player routine to do all these things together (if player knows it is ended)? > LayoutTests/TestExpectations:3880 > +imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-srcObject.https.html [ Failure ] We could update the test to do assert_true( ===). instead of assert_equal(, ). That would be good to ensure we do not regress this test. Either as part of this patch or as a follow-up that we would upstream to WPT.
Eric Carlson
Comment 4 2019-12-03 13:05:54 PST
Eric Carlson
Comment 5 2019-12-03 13:22:18 PST
Created attachment 384745 [details] Patch for landing
Eric Carlson
Comment 6 2019-12-03 13:56:34 PST
Created attachment 384756 [details] Patch for landing
Alexey Proskuryakov
Comment 7 2019-12-04 00:09:08 PST
Comment on attachment 384756 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=384756&action=review > LayoutTests/imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-srcObject.https-expected.txt:16 > +FAIL Tests that a media element with an assigned MediaStream reports the played attribute as expected assert_equals: A MediaStream's end MUST return the last known currentTime expected 0.252313446 but got 0.252291624 This doesn't look like it can possibly be a stable result. Or can it?
youenn fablet
Comment 8 2019-12-04 00:19:38 PST
(In reply to Alexey Proskuryakov from comment #7) > Comment on attachment 384756 [details] > Patch for landing > > View in context: > https://bugs.webkit.org/attachment.cgi?id=384756&action=review > > > LayoutTests/imported/w3c/web-platform-tests/mediacapture-streams/MediaStream-MediaElement-srcObject.https-expected.txt:16 > > +FAIL Tests that a media element with an assigned MediaStream reports the played attribute as expected assert_equals: A MediaStream's end MUST return the last known currentTime expected 0.252313446 but got 0.252291624 > > This doesn't look like it can possibly be a stable result. Or can it? The test is marked as Failed for now. Plan is to either fix the implementation quickly to pass this assert or change the test to do assert_true instead of assert_equals to have a stable assertion failure message.
Eric Carlson
Comment 9 2019-12-04 12:10:49 PST
Created attachment 384831 [details] Patch for landing
Eric Carlson
Comment 10 2019-12-04 12:49:48 PST
Created attachment 384835 [details] Patch for landing
WebKit Commit Bot
Comment 11 2019-12-05 06:27:37 PST
Comment on attachment 384835 [details] Patch for landing Clearing flags on attachment: 384835 Committed r253148: <https://trac.webkit.org/changeset/253148>
WebKit Commit Bot
Comment 12 2019-12-05 06:27:39 PST
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 13 2019-12-05 15:53:27 PST
It looks like the changes in https://trac.webkit.org/changeset/253148/webkit has caused fast/mediastream/stream-switch.html to timeout on Mac. History: https://results.webkit.org/?suite=layout-tests&test=fast%2Fmediastream%2Fstream-switch.html I was able to reproduce this locally by just running the test in iterations.
Truitt Savell
Comment 14 2019-12-09 09:19:33 PST
Truitt Savell
Comment 15 2019-12-09 09:20:06 PST
Reopening
Note You need to log in before you can comment on or make changes to this bug.