Source/WebCore/html/HTMLMediaElement.cpp
@@ -1212,6 +1212,9 @@ void HTMLMediaElement::prepareForLoad()
     m_havePreparedToPlay = false;
     m_displayMode = Unknown;
     m_currentSrc = URL();
+#if ENABLE(MEDIA_STREAM)
+    m_mediaStreamSrcObject = nullptr;
+#endif
 
 #if ENABLE(WIRELESS_PLAYBACK_TARGET)
     m_failedToPlayToWirelessTarget = false;
@@ -1600,7 +1603,7 @@ void HTMLMediaElement::loadResource(const URL& initialURL, ContentType& contentT
     }
 #endif
 #if ENABLE(MEDIA_STREAM)
-    if (!loadAttempted && m_mediaStreamSrcObject) {
+    if (!loadAttempted && hasMediaStreamSrcObject()) {
         loadAttempted = true;
         ALWAYS_LOG(LOGIDENTIFIER, "loading media stream blob");
         if (!m_player->load(m_mediaStreamSrcObject->privateStream()))
@@ -2999,6 +3002,9 @@ void HTMLMediaElement::seekWithTolerance(const MediaTime& inTime, const MediaTim
     if (m_readyState == HAVE_NOTHING || !m_player)
         return;
 
+    if (!supportsSeeking())
+        return;
+
     // If the media engine has been told to postpone loading data, let it go ahead now.
     if (m_preload < MediaPlayer::Auto && m_readyState < HAVE_FUTURE_DATA)
         prepareToPlay();
@@ -3339,7 +3345,7 @@ double HTMLMediaElement::defaultPlaybackRate() const
     // A MediaStream is not seekable. Therefore, this attribute must always have the
     // value 1.0 and any attempt to alter it must be ignored. Note that this also means
     // that the ratechange event will not fire.
-    if (m_mediaStreamSrcObject)
+    if (hasMediaStreamSrcObject())
         return 1;
 #endif
 
@@ -3354,7 +3360,7 @@ void HTMLMediaElement::setDefaultPlaybackRate(double rate)
     // A MediaStream is not seekable. Therefore, this attribute must always have the
     // value 1.0 and any attempt to alter it must be ignored. Note that this also means
     // that the ratechange event will not fire.
-    if (m_mediaStreamSrcObject)
+    if (hasMediaStreamSrcObject())
         return;
 #endif
 
@@ -3383,7 +3389,7 @@ double HTMLMediaElement::playbackRate() const
     // "playbackRate" - A MediaStream is not seekable. Therefore, this attribute must always
     // have the value 1.0 and any attempt to alter it must be ignored. Note that this also
     // means that the ratechange event will not fire.
-    if (m_mediaStreamSrcObject)
+    if (hasMediaStreamSrcObject())
         return 1;
 #endif
 
@@ -3399,7 +3405,7 @@ void HTMLMediaElement::setPlaybackRate(double rate)
     // "playbackRate" - A MediaStream is not seekable. Therefore, this attribute must always
     // have the value 1.0 and any attempt to alter it must be ignored. Note that this also
     // means that the ratechange event will not fire.
-    if (m_mediaStreamSrcObject)
+    if (hasMediaStreamSrcObject())
         return;
 #endif
 
@@ -3443,7 +3449,7 @@ bool HTMLMediaElement::ended() const
     // http://w3c.github.io/mediacapture-main/#mediastreams-in-media-elements
     // When the MediaStream state moves from the active to the inactive state, the User Agent
     // must raise an ended event on the HTMLMediaElement and set its ended attribute to true.
-    if (m_mediaStreamSrcObject && m_player && m_player->ended())
+    if (hasMediaStreamSrcObject() && m_player && m_player->ended())
         return true;
 #endif
 
@@ -3463,7 +3469,7 @@ String HTMLMediaElement::preload() const
 #if ENABLE(MEDIA_STREAM)
     // http://w3c.github.io/mediacapture-main/#mediastreams-in-media-elements
     // "preload" - On getting: none. On setting: ignored.
-    if (m_mediaStreamSrcObject)
+    if (hasMediaStreamSrcObject())
         return "none"_s;
 #endif
 
@@ -3486,7 +3492,7 @@ void HTMLMediaElement::setPreload(const String& preload)
 #if ENABLE(MEDIA_STREAM)
     // http://w3c.github.io/mediacapture-main/#mediastreams-in-media-elements
     // "preload" - On getting: none. On setting: ignored.
-    if (m_mediaStreamSrcObject)
+    if (hasMediaStreamSrcObject())
         return;
 #endif
 
@@ -3694,6 +3700,16 @@ void HTMLMediaElement::detachMediaSource()
 }
 
 #endif
+
+bool HTMLMediaElement::canLoop() const
+{
+#if ENABLE(MEDIA_STREAM)
+    if (hasMediaStreamSrcObject())
+        return false;
+#endif
+
+    return !m_mediaController && supportsSeeking();
+}
 
 bool HTMLMediaElement::loop() const
 {
@@ -4851,7 +4867,7 @@ void HTMLMediaElement::mediaPlayerTimeChanged()
     // When the current playback position reaches the end of the media resource then the user agent must follow these steps:
     if (dur && dur.isValid() && !dur.isPositiveInfinite() && !dur.isNegativeInfinite()) {
         // If the media element has a loop attribute specified and does not have a current media controller,
-        if (loop() && !m_mediaController && playbackRate > 0) {
+        if (loop() && playbackRate > 0 && canLoop()) {
             m_sentEndEvent = false;
             // then seek to the earliest possible position of the media resource and abort these steps when the direction of
             // playback is forwards,
@@ -4882,7 +4898,7 @@ void HTMLMediaElement::mediaPlayerTimeChanged()
             m_sentEndEvent = false;
     } else {
 #if ENABLE(MEDIA_STREAM)
-        if (m_mediaStreamSrcObject) {
+        if (hasMediaStreamSrcObject()) {
             // http://w3c.github.io/mediacapture-main/#event-mediastream-inactive
             // 6. MediaStreams in Media Elements
             // When the MediaStream state moves from the active to the inactive state, the User Agent
@@ -5606,8 +5622,7 @@ void HTMLMediaElement::userCancelledLoad()
 void HTMLMediaElement::clearMediaPlayer()
 {
 #if ENABLE(MEDIA_STREAM)
-    if (!m_settingMediaStreamSrcObject)
-        m_mediaStreamSrcObject = nullptr;
+    m_mediaStreamSrcObject = nullptr;
 #endif
 
 #if ENABLE(MEDIA_SOURCE)
