Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h
@@ -240,6 +240,7 @@ private:
     std::unique_ptr<PAL::Clock> m_clock;
 
     MediaTime m_pausedTime;
+    mutable MediaTime m_lastReportedTime;
 
     struct CurrentFramePainter {
         CurrentFramePainter() = default;
